# rgb-d_slam

./: .gitignore  README.md
icp_cpp/: CMakeLists.txt  package.xml
icp_cpp/config/: scenes.txt
icp_cpp/results/scene0000_00/: run_info.txt
icp_cpp/results/scene0000_00/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0005_00/: run_info.txt
icp_cpp/results/scene0005_00/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0011_00/: run_info.txt
icp_cpp/results/scene0011_00/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0011_01/: run_info.txt
icp_cpp/results/scene0011_01/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0050_01/: run_info.txt
icp_cpp/results/scene0050_01/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0378_00/: metrics.txt  run_info.txt
icp_cpp/results/scene0378_00/trajectories/: estimated_trajectory.txt  groundtruth_trajectory.txt
icp_cpp/results/scene0378_02/: run_info.txt
icp_cpp/results/scene0378_02/trajectories/: groundtruth_trajectory.txt
icp_cpp/results/scene0518_00/: run_info.txt
icp_cpp/results/scene0518_00/trajectories/: estimated_trajectory.txt
icp_cpp/scripts/: evaluate_and_plot.py  evaluate_scene.sh  evaluate_trajectory.py  generate_figures.py  generate_report.py  generate_summary.py  plot_trajectory.py  run_all.sh  run_scene.sh  save_groundtruth.py  save_trajectory.py
icp_cpp/src/: icp_node.cpp
icp_cpp/summary/: average_metrics.txt  best_scene.txt  results.csv  worst_scene.txt
icp_cpp/summary/figures/: summary_table.csv
open3d_slam_core/: CMakeLists.txt  package.xml
open3d_slam_core/include/example_param/: configuration.lua
open3d_slam_core/include/example_param/default/: default_parameters.lua  parameter_structure_definitions.lua
open3d_slam_core/include/open3d_slam/: LuaLoader.hpp  Parameters.hpp  SlamWrapper.hpp  configuration_file_resolver.h  helpers-io.hpp  lua_parameter_dictionary.h
open3d_slam_core/src/: LuaLoader.cpp  Mapper.cpp  SlamWrapper.cpp  configuration_file_resolver.cc  example.cpp  lua_parameter_dictionary.cc  minimal_example.cpp  parameter_loaders.cpp
open3d_slam_core/test/: lua_parameter_dictionary_test.cc
open3d_slam_ros2/: CMakeLists.txt  PLOTTING_GUIDE.md  TUNING_AND_EVALUATION.md  USAGE.md  launch_open3d.zsh  package.xml
open3d_slam_ros2/launch/: open3d_slam_eval_launch.py
open3d_slam_ros2/open3d_slam_ros2/: estimated_trajectory.txt  eval.zsh  gt.txt
open3d_slam_ros2/src/: open3d_slam_node.cpp
scannet_publisher/: glim.launch.py  open3d.launch.py  setup.py
scannet_publisher/scannet_publisher/: scannet_publisher.py
small_gicp_slam/: estimated_trajectory.txt  gt.txt  plot_trajectory.py  slam_node.py
small_gicp_slam/scene0005_00/: estimated_trajectory_scene0005_00.txt  gt_scene0005_00.txt
small_gicp_slam/scene0011_00/: estimated_trajectory_scene0011_00.txt  gt_scene0011_00.txt
small_gicp_slam/scene0011_01/: estimated_trajectory_scene0011_01.txt  gt_scene0011_01.txt
small_gicp_slam/scene0050_01/: estimated_trajectory_scene0050_01.txt  gt_scene0050_01.txt
small_gicp_slam/scene0378_00/: estimated_trajectory_scene0378_00.txt  gt_scene0378_00.txt
small_gicp_slam/scene0378_02/: estimated_trajectory_scene0378_02.txt  gt_scene0378_02.txt
small_gicp_slam/scene0518_00/: estimated_trajectory_scene0518_00.txt  gt_scene0518_00.txt
